# lunar-ghost

./: .gitignore  README.md
.github/workflows/: cmake-windows.yml
eclipsera-engine/: CMakeLists.txt  imgui.ini
eclipsera-engine/bootstrap/: Game.cpp  Instance.h  LuaScheduler.cpp  Renderer.cpp  ShapeMeshes.h  main.cpp  place_file.h
eclipsera-engine/bootstrap/gui/: ExplorerPanel.cpp  ExplorerPanel.h  PreferencesWindow.cpp  PreferencesWindow.h  PropertyPanel.cpp  PropertyPanel.h  TopbarPanel.h
eclipsera-engine/bootstrap/instances/: BasePart.cpp  BasePart.h  Folder.cpp  MeshPart.h  Model.cpp  Sky.cpp  Workspace.cpp  Workspace.h
eclipsera-engine/bootstrap/services/: UserInputService.h
eclipsera-engine/bootstrap/shaders/: shaders.h
eclipsera-engine/core/datatypes/: CFrame.cpp  CFrame.h  LuaDatatypes.h  Ray.h  Vector2.cpp
examples/: camera_pan.lua  camera_test.lua  camera_test2.lua  display_parts.lua  prototype_controller.lua
moon-engine/: BUILD.bat  Build & Run.bat  Build-main.bat  CMakeLists.txt  moon-engine.rc
moon-engine/bootstrap/: Game.cpp  Instance.cpp  Instance.h  ScriptingAPI.cpp  main.cpp
moon-engine/bootstrap/fonts/: convert_font.ps1  convert_font.py  meslo_font_data.h
moon-engine/bootstrap/gui/: GuiManager.cpp  GuiManager.h  TopbarPanel.cpp
moon-engine/bootstrap/instances/: CameraGame.cpp  CameraGame.h  Folder.h  InstanceTypes.h  MeshPart.cpp  Model.h  Sky.h
moon-engine/bootstrap/services/: LogService.cpp  LogService.h  Service.cpp  TweenService.cpp  TweenService.h  UserInputService.cpp
moon-engine/content/icon/: icon_ico_file.h
moon-engine/content/textures/: test_texture.txt
moon-engine/core/datatypes/: Enum.cpp  Vector2.h  Vector3Game.cpp
